# ant_logic

./: README.md
backend/: .gitignore  Cargo.toml  notes  site.db
backend/src/: api_key.txt  auth.rs  database.rs  main.rs  scores.rs  user.rs
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  page.css
frontend/src/components/: Edge.tsx  Level.tsx  Toolbar.tsx
frontend/src/components/nodes/: And.tsx  Bulb.tsx  Bumi.tsx  Nand.tsx  Nor.tsx  Not.tsx  Or.tsx  Xnor.tsx  Xor.tsx
frontend/src/hooks/: storage.ts
frontend/src/pages/: Leaderboard.tsx  Library.tsx  index.tsx  notfound.tsx
frontend/src/pages/levels/: 1.tsx  index.tsx  level_data.ts
frontend/src/pages/login/: index.tsx
frontend/src/pages/signup/: index.tsx
frontend/src/styles/: home.css  index.css  leaderboard.css  level.css  levels.css  library.css  login.css
frontend/src/utils/: backend.ts  handles.ts  logic.ts  state.ts  svgs.tsx
